--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,23 +25,24 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
-.btn-events {
+.control-btns {
   z-index: 999;
   position: fixed;
   top: 20px;
   left: 20px;
 }
-.row {
+.app-row {
+  position: relative;
   margin: 0;
-}
-.page-cover {
-  display: none;
+  height: 100vh;
+  overflow-x: hidden;
 }
 .map-container {
   position: fixed;
-  z-index: 2;
+  z-index: 1;
   top: 0;
   left: 0;
+  width: 100%;
   height: 100vh;
   transition: 0.3s;
 }
@@ -50,10 +51,18 @@
   width: 100%;
 }
 .cards-container {
-  padding-top: 30px;
-  padding-left: 10px;
+  position: fixed;
+  width: 400px;
+  height: 100vh;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   transition: 0.3s;
-  z-index: 1;
+  right: 0;
+  background: rgba(255,255,255,0.7);
+  z-index: 9;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .card {
   border: none;
@@ -74,7 +83,7 @@
   background: rgba(0,0,0,0.9);
   color: #FFF;
   padding: 3px 0;
-  line-height: 33px;
+  line-height: 28px;
   box-shadow: 10px 0 0 rgba(0,0,0,0.9), -10px 0 0 rgba(0,0,0,0.9);
 }
 .card-img-overlay .event-date {
@@ -97,6 +106,7 @@
 }
 
 .map-marker {
+  opacity: 0;
   transition: 0.2s;
   background: #41bef4;
   width: 10px;
@@ -120,6 +130,29 @@
   position: absolute;
   top:  0;
 }
+
+.filter-container {
+  height: 100px;
+  background: green;
+  width: 100%;
+  position: fixed;
+  transition: 0.3s;
+  bottom: 0;
+  background: rgba(255,255,255,0.7);
+  z-index: 9;
+}
+
+.filter-days-btns {
+  padding: 20px;
+}
+.filter-days-btns .btn.active {
+  background-color: #f45342;
+}
+.filter-days-btns .btn:hover {
+  background-color: #41bef4;
+}
+
+
 body {
   background-color: #FAFAFA;
 }
