--- a/client/src/App.css
+++ b/client/src/App.css
@@ -125,8 +125,13 @@
   z-index: 9;
 }
 
+#eventsModal .modal-dialog {
+  max-width: 600px;
+}
+
 #eventsModal .modal-body {
-  max-height: 400px;
+  height: 500px;
+  padding: 0;
   overflow-y: scroll;
 }
 
@@ -198,8 +203,17 @@
   margin-right: 0;
 }
 
+.loading-screen {
+  width: 100%;
+  height: 100vh;
+  z-index: 999;
+  background: #6c71c4;
+  text-align: center;
+}
+
 
 .map-marker {
+  cursor: pointer;
   opacity: 0;
   transition: 0.2s;
   background: #41bef4;
