--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,6 +61,17 @@
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
 
+input[type="search"] {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  -webkit-appearance: searchfield;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: searchfield-cancel-button;
+}
+
 .App.row {
   margin: 0;
 }
