--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,29 +25,31 @@
   left: 20px;
 }
 .events-counter {
-  z-index: 999;
+  z-index: 9;
   position: absolute;
   top: 20px;
   left: 20px;
-  background: rgba(0,0,0,0.6);
+  background: rgba(0,0,0,0.5);
   color: #FFF;
   font-size: 20px;
   font-weight: bold;
   line-height: 20px;
   padding: 10px;
   border-radius: .25rem;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
 .btn-scrape-events {
-  z-index: 999;
+  z-index: 9;
   bottom: 20px;
   left: 20px;
   position: absolute;
   opacity: 0.05;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
 
 .search-bar {
   position: absolute;
-  z-index: 999;
+  z-index: 9;
   top: 20px;
   left: 0;
   right: 0;
@@ -56,7 +58,7 @@
 }
 
 .search-bar input {
-  background: #FFF;
+  background: rgba(255,255,255,0.8);
   border: none;
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
@@ -116,6 +118,8 @@ input[type="search"]::-webkit-search-cancel-button {
   top: 20px;
   left: -120px;
   transition: 0.3s;
+  opacity: 0.8;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
 .settings-container .btn-settings {
   content: 'Hide';
