Improve mobile support

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,6 +38,12 @@
   border-radius: .25rem;
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
+@media screen and (max-width: 700px) {
+  .events-counter {
+    top: auto;
+    bottom: 20px;
+  }
+}
 .btn-scrape-events {
   z-index: 9;
   bottom: 20px;
@@ -54,20 +60,23 @@
   left: 0;
   right: 0;
   margin: 0 auto;
-  width: 400px;
+  width: 100%;
+  padding: 0 10px;
+  max-width: 400px;
+}
+@media screen and (max-width: 700px) {
+  .search-bar {
+    width: 60%;
+    left: 0;
+    margin: 0;
+  }
 }
 
 .search-bar input {
   background: rgba(255,255,255,0.8);
   border: none;
+  margin: 0 auto;
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-}
-
-input[type="search"] {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  -webkit-appearance: searchfield;
 }
 
 input[type="search"]::-webkit-search-cancel-button {
@@ -81,7 +90,7 @@ input[type="search"]::-webkit-search-cancel-button {
   position: relative;
   margin: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow-x: hidden;
 }
 .map-container {
@@ -89,18 +98,18 @@ input[type="search"]::-webkit-search-cancel-button {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   transition: 0.3s;
 }
 #map {
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 .settings-container {
   position: fixed;
   width: 100%;
   max-width: 400px;
-  height: 100vh;
+  height: 100%;
   transition: 0.3s;
   right: 0;
   background: rgba(255,255,255,0.8);
@@ -243,12 +252,15 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .loading-screen {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 999;
   background: #6c71c4;
   text-align: center;
 }
 
+.overlay {
+  
+}
 
 .map-marker {
   cursor: pointer;
