--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,16 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-  margin: 0;
-  padding: 0;
   font-family: sans-serif;
+}
+
+#root {
+    height: 100%;
+    width: 100%;
 }
 
 .page-cover {
