Add clickable tba events list

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,6 +57,10 @@
     top: auto;
     bottom: 20px;
   }
+  .tba-events-counter {
+    top: auto;
+    bottom: 80px;
+  }
 }
 .btn-scrape-events {
   z-index: 9;
