--- a/client/src/App.css
+++ b/client/src/App.css
@@ -68,6 +68,14 @@
   opacity: 0.05;
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
+.btn-feedback {
+  z-index: 9;
+  bottom: 20px;
+  right: 20px;
+  position: absolute;
+  opacity: 0.8;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+}
 
 .search-bar {
   position: absolute;
@@ -192,6 +200,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 #eventsModal .modal-content {
   box-shadow: 0 3px 10px rgba(0,0,0,0.4);
+  border-radius: 0;
 }
 
 
@@ -230,45 +239,6 @@ input[type="search"]::-webkit-search-cancel-button {
   background: rgba(187,68,48,0.8);
 }
 
-.cards-container .list-group-item {
-  background: rgba(255,255,255,0.5);
-}
-.cards-container .list-group-item:hover {
-  background: rgba(255,255,255,1);
-}
-
-.card {
-  border: none;
-  border-radius: 2px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-.card:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  cursor: pointer;
-}
-.card-img-top {
-  height: 150px;
-  width: 100%; 
-}
-.card-img-overlay .card-title, .card-img-overlay .card-text {
-  display: inline;
-  background: rgba(0,0,0,0.9);
-  color: #FFF;
-  padding: 3px 0;
-  line-height: 28px;
-  box-shadow: 10px 0 0 rgba(0,0,0,0.9), -10px 0 0 rgba(0,0,0,0.9);
-}
-.card-img-overlay .event-date {
-  position: absolute;
-  right: 0;
-  top: 110px;
-  line-height: 30px;
-  padding: 5px 10px;
-  box-shadow: none;
-  background: rgba(247, 120, 9, 0.9);
-}
-
 .tag {
   /*padding: 3px 8px;*/
   /*font-size: 12px;*/
@@ -290,10 +260,6 @@ input[type="search"]::-webkit-search-cancel-button {
   z-index: 999;
   background: #6c71c4;
   text-align: center;
-}
-
-.overlay {
-  
 }
 
 .map-marker {
@@ -321,52 +287,7 @@ input[type="search"]::-webkit-search-cancel-button {
   height: 50px;
   cursor: pointer;
 }
-.infowindow {
-  width: 300px;
-  max-height: 400px;
-  overflow-y: scroll;
-  background: #FFF;
-  position: absolute;
-  top:  0;
-  transform: translateY(-100%) translateX(-50%);
-  text-align: left;
-  line-height: 16px;
-}
-
-.1settings-container {
-  height: 100px;
-  width: 100%;
-  position: fixed;
-  transition: 0.3s;
-  bottom: 0;
-  background: rgba(255,255,255,0.7);
-  z-index: 9;
-  padding: 30px;
-
-}
-
-#1settings .filter-days-btns {
-  display: inline-flex;
-}
-#1settings .filter-days-btns .btn {
-  margin: 0 5px;
-}
-#se1ttings .filter-days-btns .btn.active {
-  background-color: #2D7FE8;
-}
-#se1ttings .filter-days-btns .btn:hover {
-  background-color: #41bef4;
-}
-#se1ttings .filter-days-btns .btn.active:hover {
-  background-color: #f45342;
-}
 
 body {
   background-color: #FAFAFA;
-}
-
-@media only screen and (max-width: 960px) {
-  .cards-container {
-    width: 100%;
-  }
 }
