--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,8 @@
   background: rgba(255,255,255,0.8);
   border: none;
   margin: 0 auto;
+  padding: 10px;
+  width: 100%;
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
 
@@ -237,6 +239,10 @@ input[type="search"]::-webkit-search-cancel-button {
   color: #FFF;
   padding: 4px 12px;
   background: rgba(187,68,48,0.8);
+}
+
+.event-time {
+  padding-right: 10px;
 }
 
 .tag {
