--- a/src/App.css
+++ b/src/App.css
@@ -26,41 +26,30 @@
   left: 20px;
 }
 .tba-events-counter {
-  z-index: 9;
-  top: 40px;
-  text-align: center;
-  background: rgba(230,0,0,0.5);
+  color: rgba(255,255,255,0.5);
   cursor: pointer;
   color: #FFF;
-  font-size: 14px;
-  padding: 4px 10px;
-  margin-top: 8px;
-  border-radius: .25rem;
+  font-size: 1rem;
+  padding-left: 10px;
 }
 .events-counter {
-  z-index: 9;
+  text-align: center;
   position: absolute;
-  top: 20px;
-  left: 20px;
-  background: rgba(0,0,0,0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(226,120,0,0.8);
   color: #FFF;
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 1.1rem;
   line-height: 20px;
   padding: 10px;
-  border-radius: .25rem;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
-@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 700px) {
   .events-counter {
-    top: auto;
-    bottom: 20px;
   }
   .tba-events-counter {
-    top: auto;
-    bottom: 80px;
   }
-}
+} */
 .btn-scrape-events {
   z-index: 9;
   bottom: 20px;
@@ -91,9 +80,7 @@
 }
 @media screen and (max-width: 700px) {
   .search-bar {
-    width: 60%;
-    left: 0;
-    margin: 0;
+    width: 100%;
   }
 }
 
@@ -101,9 +88,10 @@
   background: rgba(255,255,255,0.8);
   border: none;
   margin: 0 auto;
-  padding: 10px;
+  padding: 10px 55px 10px 15px;
   width: 100%;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+  box-shadow: 0 3px 10px rgba(0,0,0,0);
+  border-radius: 0;
 }
 
 input[type="search"]::-webkit-search-cancel-button {
@@ -134,35 +122,50 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 .settings-container {
   position: fixed;
+  top: 64px;
   width: 100%;
-  max-width: 400px;
-  height: 100%;
-  transition: 0.3s;
+  max-width: 380px;
+  left: 0;
   right: 0;
+  margin: 0 auto;
+  height: auto;
+  max-height: 80%;
+  transition: 0.3s;
   background: rgba(255,255,255,0.8);
   z-index: 9;
   padding: 20px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+  padding-top: 50px;
+  box-shadow: 0 3px 10px rgba(0,0,0,0);
+  border-bottom: 5px solid rgba(226, 120, 0, 0.8);
+  overflow: hidden;
 }
 .settings-container.hide {
-  right: -400px;
+  max-height: 0;
+  border: 0;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 
-.settings-container.hide .btn-settings {
-  position: absolute;
-  top: 20px;
-  left: -60px;
-  transition: 0.3s;
-  opacity: 0.8;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+.search-bar .btn-settings.active {
+  background: rgba(226,120,0,1);
+  color: #FFF;
 }
-.settings-container .btn-settings {
+.btn-settings {
   transition: 0.3s;
   z-index: 999;
   position: absolute;
-  top: 20px;
-  left: 340px;
+  top: 0;
+  right: 10px;
+  transition: 0.3s;
+  opacity: 0.8;
+  line-height: 32px;
+  border: none;
+  color: rgba(0,0,0,0.6);
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 0;
+  background: transparent;
 }
 #settings .days-btns {
   display: inline-flex;
@@ -175,13 +178,13 @@ input[type="search"]::-webkit-search-cancel-button {
   border-color: transparent;
 }
 #settings .days-btns .btn.active {
-  background-color: #2D7FE8;
+  background-color: rgba(226,120,0,0.8);
 }
 #settings .days-btns .btn:hover {
-  background-color: #41bef4;
+  background-color: rgba(247, 161, 63, 0.753);
 }
 #settings .days-btns .btn.active:hover {
-  background-color: #f45342;
+  background-color: rgb(226, 120, 0);
 }
 .settings-btns {
   position: absolute;
@@ -266,6 +269,7 @@ input[type="search"]::-webkit-search-cancel-button {
   height: 100%;
   z-index: 999;
   background: #6c71c4;
+  background: rgba(226,120,0,0.8);
   text-align: center;
 }
 
@@ -273,7 +277,7 @@ input[type="search"]::-webkit-search-cancel-button {
   cursor: pointer;
   opacity: 0;
   transition: 0.2s;
-  background: #41bef4;
+  background: rgba(226, 120, 0, 1);
   color: #FFF;
   width: 10px;
   height: 10px;
