--- a/src/App.css
+++ b/src/App.css
@@ -460,12 +460,15 @@ input:-webkit-autofill:active {
   cursor: pointer;
 }
 
-.btn-profile {
+
+/* Profile */
+
+.hidden .btn-profile {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
-  z-index: 1;
-  background: rgba(226,120,0,0.8);;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  background: rgba(226,120,0,0.8);
   height: 60px;
   width: 60px;
   border: none;
@@ -473,6 +476,41 @@ input:-webkit-autofill:active {
   color: #FFF;
   box-shadow: 0 3px 10px 1px rgba(0,0,0,0.3);
 }
-.btn-profile:hover {
-  background: rgb(168, 90, 0);
+
+.btn-profile {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  background: transparent;
+  height: 60px;
+  width: 60px;
+  border: none;
+  border-radius: 0;
+  color: #FFF;
+  box-shadow: 0 3px 10px 1px rgba(0,0,0,0);
+  transition: 0.4s;
+}
+
+
+.profile {
+  z-index: 1;
+  background: rgba(168, 90, 0, 0.9);
+  width: calc(100% - 40px);
+  height: 50%;
+  border-radius: 0;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  transition: 0.3s;
+}
+
+.profile.hidden {
+  background: rgba(168, 90, 0, 0.1);
+  height: 60px;
+  width: 60px;
+  border-radius: 30px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
 }
