--- a/src/scss/_overlay.scss
+++ b/src/scss/_overlay.scss
@@ -214,6 +214,60 @@
   }
 }
 
+
+.location-picker-container {
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  background: rgba(82, 51, 16, 0.4);
+  .location-picker {
+    height: auto;
+    width: 100%;
+    max-width: 840px;
+    button {
+      font-family: 'Lobster', cursive;
+      height: 200px;
+      width: 200px;
+      border: none;
+      margin: 5px;
+      background: rgba(209, 124, 27, 0.9);
+      color: rgba(255, 255, 255, 0.9);
+      font-size: 26px;
+      box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);
+      transition: 0.2s;
+      cursor: pointer;
+      &:hover {
+        background: rgba(226, 120, 0, 0.9);
+        box-shadow: 0 4px 20px 1px rgba(0, 0, 0, 0.5);
+
+      }
+    }
+    @media screen and (max-width: 1000px) {
+      max-width: 600px;
+      button {
+        width: 140px;
+        height: 140px;
+        font-size: 18px;
+      }
+    }
+    @media screen and (max-width: 650px) {
+      width: 260px;
+      button {
+        width: 120px;
+        height: 120px;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+
 .loading-screen {
   width: 100%;
   height: 100vh;
